# docling-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  detect_gpu.sh  docker-compose.cpu.yml  docker-compose.gpu.yml  entrypoint.sh  pyproject.toml
document_converter/: route.py  schema.py  service.py
worker/: tasks.py
