[project]
name = "document-to-markdown"
version = "0.1.0"
description = ""
authors = [
    {name = "davidemmanuel75@gmail.com", email = "davidemmanuel75@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "docling>=2.17.0",
    "python-multipart>=0.0.17",
    "celery>=5.4.0",
    "flower>=2.0.1",
    "redis>=5.2.0",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
